# scratch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/cli/: CMakeLists.txt  argparse.cpp  cli11.cpp  main.cpp
cpp/common/: ThreadSafeQueue.h  glfwErrorCallback.h  stoi.h  utcTime.h
cpp/dds/: CMakeLists.txt  DDSTypes.h  DatafulMessage.h  MySuperCoolMessage.h  Pub.h  PubData.h  README.md  Sub.h  SubPlotter.h  cli.def  data-pub.cpp  plot-sub.cpp  pub.cpp  settings.h  sub.cpp  trulyMinimal.cpp
cpp/dds/PubListeners/: DefaultPubListener.h
cpp/dds/SubListeners/: AccumulatingSubListener.h  DefaultSubListener.h  EmptySubListener.h
cpp/dep/: CMakeLists.txt
cpp/implot-demos/: CMakeLists.txt  implot-demos.cpp  implot-image.h  map-demo.cpp  map-demo.h
cpp/net/: CMakeLists.txt  IpAddr.h  README.md  send-udp.cpp  showip.cpp
cpp/xml/: CMakeLists.txt  README.md  recursive_find_child_by_attribute.h  xml.cpp  xml.xml
python/covered-options/: README.md  bestOptions.py  connect2etrade.py  enums.py  main.py  nextFriday.py  recommendedStrikePrices.py  requirements.txt  settings.py  stocks.py  symbolFilter.py  trend.py
python/net/: README.md  enums.py  recv.py  send.py
python/net/common/: logSetup.py  modeHandle.py
python/pyimplot/: README.md
python/pyo3/: Cargo.toml  README.md  pyproject.toml
python/pyo3/src/: lib.rs
rust/net/: Cargo.toml
rust/net/src/: enums.rs  main.rs  recv.rs  send.rs
rust/net/src/utils/: dunno.rs  mod.rs
rust/pyo3/: Cargo.toml  README.md
rust/pyo3/src/: lib.rs
