add_subdirectory(dep)

# Variables --------------------------------------------------------------------

set(SCRATCH_CPP_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# Example Workspaces -----------------------------------------------------------

add_subdirectory(implot-demos)
add_subdirectory(cli)
add_subdirectory(dds)
